<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/locationViewOfficial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#552255"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/no_data_for_location"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/youtubeView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="16dp"
            android:onClick="goToYoutube"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/twitterView"
            app:layout_constraintTop_toBottomOf="@+id/websiteView"
            app:srcCompat="@drawable/youtube"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/officeNameView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/officenameview"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationViewOfficial" />

        <TextView
            android:id="@+id/officialNameView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nameview"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/officeNameView" />

        <TextView
            android:id="@+id/partyNameView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/partynameview"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/officialNameView" />

        <ImageView
            android:id="@+id/photoView"
            android:layout_width="280dp"
            android:layout_height="360dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:onClick="goToPhotoActivity"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/partyNameView"
            app:srcCompat="@drawable/missing"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

        <TextView
            android:id="@+id/addressPointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="19dp"
            android:text="@string/address"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoView" />

        <TextView
            android:id="@+id/addressView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="16dp"
            android:text="@string/addresslink"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addressPointer"
            app:layout_constraintTop_toBottomOf="@+id/photoView" />

        <TextView
            android:id="@+id/phonePointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressView" />

        <TextView
            android:id="@+id/phoneView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/phoneurl"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/phonePointer"
            app:layout_constraintTop_toBottomOf="@+id/addressView" />

        <TextView
            android:id="@+id/emailPointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phonePointer" />

        <TextView
            android:id="@+id/emailView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/emailurl"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/emailPointer"
            app:layout_constraintTop_toBottomOf="@+id/phoneView" />

        <TextView
            android:id="@+id/websitePointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/website"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailPointer" />

        <TextView
            android:id="@+id/websiteView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/websiteurl"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/websitePointer"
            app:layout_constraintTop_toBottomOf="@+id/emailView" />

        <ImageView
            android:id="@+id/partyIconView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:onClick="goToPartyWebsite"
            app:layout_constraintBottom_toBottomOf="@+id/photoView"
            app:layout_constraintEnd_toEndOf="@+id/photoView"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/photoView"
            app:srcCompat="@color/white"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/facebookView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="78dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="16dp"
            android:onClick="goToFacebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/websiteView"
            app:srcCompat="@drawable/facebook"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/twitterView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="16dp"
            android:onClick="goToTwitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/facebookView"
            app:layout_constraintTop_toBottomOf="@+id/websiteView"
            app:srcCompat="@drawable/twitter"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>